<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/menu_favorite"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/sort_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/menu_logout"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="never" />


</menu>